# zaptos-api-wrapper

./: .gitignore  AGENTS.md  README.md
docs/: AI-MANUAL.md  API-REFERENCE.md  zaptoswpp-api-pt-br.yaml
wrapper/: pyproject.toml
wrapper/src/zaptos/: cli.py  client.py  config.py  ghl.py
wrapper/src/zaptos/endpoints/: analytics.py  campaigns.py  contacts.py  conversations.py  flows.py  messages.py  templates.py  webhooks.py
wrapper/tests/: test_cli.py  test_client.py  test_config.py  test_profiles.py
